--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- hello there -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>R0B0_DEV</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css" >
@@ -13,8 +13,8 @@
     <body>
         <div class="topnav">
   <ul>
-  <li><a href="https://www.google.com">Home</a></li>
-  <li><a href="#">E</a></li>
+  <li><a href="#">Home</a></li>
+  <li><a href="#">Updates</a></li>
   <li><a href="#">Contact Me</a></li>
   <li><a href="#">About Me</a></li>
 </ul>
