--- a/updates.html
+++ b/updates.html
@@ -15,10 +15,10 @@
         <body>
         <div class="topnav">
   <ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="#">Updates</a></li>
-  <li><a href="#">Contact Me</a></li>
-  <li><a href="#">About Me</a></li>
+  <li><a href="https://r0b0dev.com">Home</a></li>
+  <li><a href="https://r0b0dev.com/updates">Updates</a></li>
+  <li><a href="https://r0b0dev.com/contact-me">Contact Me</a></li>
+  <li><a href="https://r0b0dev.com/about-me">About Me</a></li>
 </ul>
     </div>
             
