--- a/404.html
+++ b/404.html
@@ -19,6 +19,6 @@
     <div class="head">
     <h1>404</h1>
     </div>
-    <p>Page not found! Continue <a href="index.html">here</a>!</p>
+    <p>Page not found! Please continue <a href="https://r0b0dev.com">here</a></p>
 </div>
 </html>
