--- a/updates.html
+++ b/updates.html
@@ -19,6 +19,7 @@
   <li><a href="https://r0b0dev.com/updates">Updates</a></li>
   <li><a href="https://r0b0dev.com/contact-me">Contact Me</a></li>
   <li><a href="https://r0b0dev.com/about-me">About Me</a></li>
+  <li class="logo"><p class="logo">R0B0DEV</p></li>    
 </ul>
     </div>
             
