--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             
 <div class="content">
     <div class="head">
-    <h1>hey</h1>
+    <h1>Welcome!</h1>
     </div>
-    <p>some text here</p>
+    <p>This website was created for the purpose of showing off work and the man behind it, feel free to check it all out and if you have any feedback i'd love to hear it!</p>
 </div>
 </html>
