--- a/about-me.html
+++ b/about-me.html
@@ -17,10 +17,10 @@
     <body>
         <div class="topnav">
   <ul>
-  <li><a href="r0b0dev.com/">Home</a></li>
-  <li><a href="r0b0dev.com/">Updates</a></li>
-  <li><a href="r0b0dev.com/">Contact Me</a></li>
-  <li><a href="r0b0dev.com/">About Me</a></li>
+  <li><a href="https://r0b0dev.com">Home</a></li>
+  <li><a href="https://r0b0dev.com/updates">Updates</a></li>
+  <li><a href="https://r0b0dev.com/contact-me">Contact Me</a></li>
+  <li><a href="https://r0b0dev.com/about-me">About Me</a></li>
   <li class="logo"><p class="logo">R0B0DEV</p></li>
 </ul>
     </div>
