--- a/about-me.html
+++ b/about-me.html
@@ -31,7 +31,7 @@
     <h1>About Me</h1>
     </div>
     <p>Hey, I'm an amateur programmer with an interest in taking things further, I can't say my work will be the best however I can assure you that I'm always striving to do better.
-    I sometimes get given the question of why I chose this path, what drives me, what makes me good for this line of work, although I really think what you wan't to hear is that deep down I
+    I sometimes get given the question of why I chose this path, what drives me, what makes me good for this line of work, although I really think what you want to hear is that deep down I
     long for the day I can look back on the work I've done with pride, to have taken the time to become the man others would'nt have the courage to be and to be able to show that to you, not 
     with the words here but the work I'm yet to do.</p>
 </div>
